--- a/best-app/style.css
+++ b/best-app/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: lightgray;
     /* ============ */
     font-family: 'Architects Daughter', cursive;
     font-family: 'Courgette', cursive;
@@ -63,8 +64,8 @@ body {
     padding: 10px 20px;
     margin: 0 10px;
     border: 0;
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 .button-div {
@@ -80,7 +81,7 @@ body {
 
 /* Trusted */
 .Trusted {
-    height: 600px;
+    height: 400px;
     width: 85%;
     margin: auto;
 }
@@ -92,7 +93,7 @@ body {
     margin: 30px auto;
     font-size: 20px;
     font-weight: 700;
-    color: rgb(53, 53, 211);
+    color: rgb(3, 115, 134);
 }
 
 .Trusted-img {
@@ -102,6 +103,44 @@ body {
 
 .Trusted img {
     width: 200px;
-    height: 150px;
+    height: 120px;
     margin: 30px;
+    border-radius: 20%;
+}
+
+/* Awesome-apps-features */
+.Awesome-apps-features {
+    height: 600px;
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+}
+
+.apps-features {
+    width: 60%;
+    height: 800px;
+    margin-right: 30px;
+}
+
+.Awesome-apps-features h2 {
+    color: rgb(29, 29, 100);
+    border-left: 10px solid rgb(3, 115, 134);
+    padding: 7px;
+    border-radius: 20px;
+    font-size: 30px;
+    font-weight: 800;
+}
+
+/* Fast Parformence */
+.Fast-Parformence {
+    background-color: rgba(36, 61, 53, 0.507);
+    display: flex;
+    margin-top: 50px;
+    border-radius: 30px;
+}
+
+.Fast-Parformence img {
+    width: 100px;
+    height: 100px;
+    margin-right: 20px;
 }
