--- a/best-app/style.css
+++ b/best-app/style.css
@@ -144,3 +144,95 @@ body {
     height: 100px;
     margin-right: 20px;
 }
+
+/* smart-jackports */
+.smart-jackports {
+    height: 600px;
+    width: 85%;
+    margin: 300px auto 0;
+
+}
+
+.smart-a {
+    display: flex;
+    padding: 40px;
+}
+
+.smart-a p {
+    border-left: 5px solid rgb(3, 115, 134);
+    padding-left: 40px;
+    margin: 0px;
+    width: 70%;
+}
+
+.smart-b {
+    display: flex;
+}
+
+.smart-b div {
+    margin: 10px 20px;
+
+}
+
+.smart-b img {
+    width: 100px;
+    height: 100px;
+    border-radius: 20px;
+}
+
+.designed {
+    width: 60%;
+    height: 400px;
+    margin-right: 30px;
+}
+
+/* choses-our-app */
+.choses-our-app {
+    height: 600px;
+    width: 85%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.choses-our-app-div-1 {
+    padding: 80px;
+}
+
+.choses-our-app-div-1 h1 {
+    color: crimson;
+    font-size: 28px;
+    font-weight: 700;
+    border-bottom: 8px solid rgb(3, 115, 134);
+    padding-bottom: 8px;
+    width: 400px;
+    margin: 10px auto;
+    border-radius: 20px;
+}
+
+.choses-our-app-div-2 {
+    display: grid;
+    grid-template-columns: 350px 350px 350px;
+    padding: 0px 30px;
+
+}
+
+.choses-our-app-div-2 img {
+    height: 150px;
+    width: 150px;
+    border-radius: 20px;
+}
+
+.choses-our-app-div-2 div {
+    margin: 10px;
+    border-radius: 30px;
+    padding: 10px 20px;
+    background-color: rgb(3, 115, 134);
+    color: #ffff;
+}
+
+.choses-our-app-div-2 h3 {
+    color: rgb(29, 29, 100);
+    font-size: 25px;
+    font-weight: 700;
+
+}
